<resources>
    <string name="app_name">tkForum</string>
    <string name="app_title">Tekken Forum</string>
    <string name="home">Home</string>
    <string name="video">Video</string>
    <string name="chat">Chat</string>
    <string name="login">Login</string>
    <string name="setting">Setting</string>
    <string name="character_list">Character List</string>
    <string name="video_hint">동영상을 검색해주세요~</string>
    <string name="sign_out">로그아웃</string>
    <string name="chat_room">Chat Room</string>
    <string name="label_create_chat_room">채팅방 생성</string>
    <string name="label_manual">설명서</string>
    <string name="frame_list">Frame List</string>
    <string name="frame_list_dialog">Frame List Manual</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="frame_header_move_name">기술명, 커맨드</string>
    <string name="frame_header_start">발생</string>
    <string name="frame_header_guard">가드</string>
    <string name="frame_header_hit">히트</string>
    <string name="frame_header_counter">카운터</string>
    <string name="frame_header_hit_level">판정</string>
    <string name="frame_header_damage">데미지</string>
    <string name="profile_info">프로필 정보</string>
    <string name="nickname">닉네임</string>
    <string name="mail">이메일</string>
    <string name="download_frame_data">프레임 데이터 다시 받기</string>
    <string name="survey">고객 의견</string>
    <string name="empty_chat">채팅 내역이 존재하지 않습니다.</string>
    <string name="not_host">채팅방 을 생성한 유저만 삭제가 가능 합니다.</string>
    <string name="network_error_message">네트워크 연결 상태를 확인 해주세요</string>
    <string name="send_error_message">메시지 전송에 실패했습니다</string>
    <string name="empty_data">추후 데이터 추가 예정 입니다.</string>
    <string name="hint_et_chat_room">메시지 입력</string>
    <string name="is_chat_room_message">채팅방 은 한 계정당 한개만 생성 가능합니다.</string>
    <string name="close_snack_bar">확인</string>
    <string name="is_blank">검색어 를 입력해 주세요.</string>
    <string name="dialog_positive">확인</string>
    <string name="dialog_negative">취소</string>
    <string name="dialog_title_create_chat_room">채팅방을 생성하시겠습니까?</string>
    <string name="dialog_message_create_chat_room">채팅방은 계정당 한개만 만들수 있습니다</string>
    <string name="dialog_title_delete_chat_room">채팅방을 삭제하시겠습니까?</string>
    <string name="dialog_message_delete_chat_room">채팅방을 생성한 유저만 삭제할 수 있습니다.</string>
    <string name="dialog_manual_title">용어 설명</string>
    <string name="dialog_manual_number_commend">789\n4N6\n123</string>
    <string name="dialog_manual_arrow_commend">↖↑↗\n←N→\n↙↓↘</string>
    <string name="dialog_manual_commend">P: 펀치버튼, K: 킥버튼\nLP: 왼손, RP: 오른손 AP: 왼손+오른손\nLK: 왼발, RK: 오른발, AK: 왼발+ 오른발\n AL:왼손+왼발, AR: 오른손+ 오른발\nD: 다운, F: 프레임, G: 가드\n J: 저스트, H: 홀드, S: 스크류\ng: 가드가능, N중립, A: 공중에뜸\n상: 상단공격, 중: 중단공격\n 하: 하단공격, WB: 월바운드\n가불: 가드불능, 특: 특수</string>
    <string name="hint_frame_data_search">Frame Data 검색</string>
    <string name="dialog_setting_logout_title">로그아웃 하시겠습니까?</string>
    <string name="dialog_setting_logout_message">생성한 채팅방, 대화 내역은 삭제되지 않습니다.</string>
    <string name="dialog_get_new_frame_data_title">프레임 데이터를 다시 받습니다.</string>
    <string name="dialog_success_get_frame_data_title">프레임 데이터를 성공적으로 다운로드 했습니다.</string>
    <string name="dialog_success_get_frame_data_message">앱을 재실행 해주세요</string>
    <string name="dialog_ge_frame_data_title">프레임 데이터를 다운로드합니다.</string>
    <string name="progress_dialog_title">데이터를 받아오는 중입니다\n 잠시 기다려주세요.</string>
    <string name="notification_permission">데이터 업데이트 알림 받기</string>
    <string name="notification_permission_message">프레임 데이터 업데이트 소식을 알림으로 받습니다.</string>
    <string name="notification_permission_denied_message">프레임 데이터 업데이트 관련 중요한 알림을 받아보시려면 알림 권한을 허용해 주세요.</string>
    <string name="setting_frame_data_switch">8 캐릭터 리스트 를 기본 으로 보기</string>
</resources>